# stardewwiki-scrapper

./: .gitignore  pyproject.toml
scrapper/: __main__.py  app.py  constants.py  db.py  utils.py
scrapper/items/: __init__.py  item.py  weapon.py
scrapper/models/: __init__.py  model.py
scrapper/models/crop/: __init__.py  crop.py
scrapper/models/item/: __init__.py  item.py  weapon.py
scrapper/models/villager/: __init__.py  gifts.py  schedules.py  villager.py
scrapper/pages/: __init__.py  _items.py  crops.py  page.py  url.py  villagers.py  weapons.py
tests/: data.tar  items.py  test_crops_page.py  test_items.py  test_villagers.py  test_villagers_page.py  test_weapons_page.py  utils.py  weapons.py
tests/data/: Dark_Sword.html  Rusty_Sword.html  Villagers.html  tempered_broadsword.html  weapons.html
