[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = "Scrapper for Stardew Valley wiki"
authors = ["Sixels <sixels@protonmail.com>"]
license = "MIT"

[tool.poetry.scripts]
app = "scrapper.app:main"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
